// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapShot test snapshot should match after changing password input and clicking submit: passwordChange 1`] = `
<div>
  <div
    class="login-form"
    style="margin-top: 20%;"
  >
    <div
      class="login-form-container"
    >
      <h1>
        Login
      </h1>
      <form
        class=""
      >
        <div
          class="form-group"
        >
          <label
            for="username"
          >
            Username:
          </label>
          <input
            aria-labelledby="username-label"
            data-testid="usernameId"
            name="username"
            type="text"
            value=""
          />
        </div>
        <div
          class="form-group"
        >
          <label
            for="password"
          >
            Password:
          </label>
          <input
            aria-labelledby="password-label"
            data-testid="passwordId"
            name="password"
            type="password"
            value="hey"
          />
        </div>
        <div
          class="text-danger"
          data-testid="errorTestId"
          id="errorMsg"
          style="color: red; width: 321px;"
        >
          Username and password are required
        </div>
        <button
          class="login-button"
          disabled=""
          style="width: 105%; background-color: grey;"
          type="submit"
        >
          Please Wait...
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`snapShot test snapshot should match: usernameChangedInput 1`] = `
<DocumentFragment>
  <div
    class="login-form"
    style="margin-top: 20%;"
  >
    <div
      class="login-form-container"
    >
      <h1>
        Login
      </h1>
      <form
        class=""
      >
        <div
          class="form-group"
        >
          <label
            for="username"
          >
            Username:
          </label>
          <input
            aria-labelledby="username-label"
            data-testid="usernameId"
            name="username"
            type="text"
            value="gaylord"
          />
        </div>
        <div
          class="form-group"
        >
          <label
            for="password"
          >
            Password:
          </label>
          <input
            aria-labelledby="password-label"
            data-testid="passwordId"
            name="password"
            type="password"
            value=""
          />
        </div>
        <div
          class="text-danger"
          data-testid="errorTestId"
          id="errorMsg"
          style="color: red; width: 321px;"
        />
        <button
          class="login-button"
          style="width: 105%;"
          type="submit"
        >
          Login
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
